--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -29,5 +29,5 @@ jobs:
         uses: wearerequired/lint-action@v1
         with:
           black: true
-          auto-fix: true
+          auto_fix: true
           black_dir: Simple-Assembler/ 
