--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,9 +1,9 @@
 name: Lint
 
 on:
-  push:
-    branches:
-      - testing
+  # push:
+  #   branches:
+  #     - testing
   pull_request:
     branches:
       - testing
